<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvYourDegreeOfOdesite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:textSize="16dp"
        android:text="@string/tv_yourDegreeOfOdesite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvYourAppropriateWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_yourAppropriateWeight"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDegreeOfOdesiteResult" />

    <TextView
        android:id="@+id/tvResultUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20dp"
        android:text="@string/tv_resultUnit"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvAppropriateWeightResult"
        app:layout_constraintStart_toEndOf="@+id/tvAppropriateWeightResult" />

    <TextView
        android:id="@+id/tvAgeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_ageText"
        app:layout_constraintBaseline_toBaselineOf="@+id/etAge"
        app:layout_constraintEnd_toStartOf="@+id/etAge" />

    <TextView
        android:id="@+id/tvHeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_heightText"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHeight"
        app:layout_constraintEnd_toStartOf="@+id/etHeight" />

    <TextView
        android:id="@+id/tvWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_weightText"
        app:layout_constraintBaseline_toBaselineOf="@+id/etWeight"
        app:layout_constraintEnd_toStartOf="@+id/etWeight" />

    <TextView
        android:id="@+id/tvWeightUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_weightUnit"
        app:layout_constraintBaseline_toBaselineOf="@+id/etWeight"
        app:layout_constraintStart_toEndOf="@+id/etWeight" />

    <TextView
        android:id="@+id/tvHeightUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_heightUnit"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHeight"
        app:layout_constraintStart_toEndOf="@+id/etHeight" />

    <TextView
        android:id="@+id/tvAgeUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_ageUnit"
        app:layout_constraintBaseline_toBaselineOf="@+id/etAge"
        app:layout_constraintStart_toEndOf="@+id/etAge" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="number|numberDecimal"
        android:maxLength="3"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="number|numberDecimal"
        android:maxLength="4"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btCalculate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/button_calculate"
        app:layout_constraintBottom_toTopOf="@+id/btClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/button_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDegreeOfOdesiteResult"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_DegreeOfOdesiteResult"
        android:textAlignment="center"
        android:textSize="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYourDegreeOfOdesite" />

    <TextView
        android:id="@+id/tvAppropriateWeightResult"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_AppropriateWeightResult"
        android:textAlignment="center"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYourAppropriateWeight" />

    <TextView
        android:id="@+id/DODMethod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:text="@string/tv_DODmethod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppropriateWeightResult" />
</androidx.constraintlayout.widget.ConstraintLayout>